# llm_note

./: README.md  add_center.py
1-hpc_note/: CUDA内核执行配置及线程索引计算.md  CUDA的Stream和Event模块详解.md  CUDA编程模型进阶.md  Roofline论文解读.md  triton内核开发基础0.md  triton内核开发基础2.md  triton内核开发基础3.md  深入理解Roofline模型.md  英伟达GPU性能分析指导.md  英伟达GPU架构总结.md  英伟达GPU通信和多卡拓扑结构.md
1-transformer_model/: DeepSeekV2论文解读.md  DeepSeekV3推理代码解析.md  DeepSeekV3简单概述.md  DeepSeekV3论文解读.md  DeepseekMoE结构详解和代码实现.md  MLA结构代码实现及优化.md  MOE结构详解.md  RoPE位置编码算法详解.md  Sinusoida位置编码详解.md  attention及mask机制详解.md  deepseekv3推理综述.md  gpt1-3论文解读.md  hf模型权重加载和转换.md  kv-cache原理及优化概述.md  llama1-3模型结构详解.md  llama1-3模型解读.md  llava系列模型结构详解.md  llm参数量-计算量-显存占用分析.md  llm推理latency分析.md  masked-attention算法详解.md  transformers库快速入门.md  transformer模型结构详解及实现.md  transformer论文解读.md  vit论文速读.md  位置编码算法背景知识.md  温度系数与top-p采样策略详解.md
1-transformer_model/llm_infer_template/: CMakeLists.txt  llm_infer_demo
1-transformer_model/llm_infer_template/include/: decoder.h
1-transformer_model/llm_infer_template/src/: llm_infer_pipeline.cpp
2-llm_compression/: AWQ代码解析.md  AWQ论文解读.md  AWQ量化论文解读.md  SmoothQuant代码剖析.md  SmoothQuant源码剖析.md  SmoothQuant论文解读.md  SmoothQuant量化详解.md
2-transformer_model/: DeepSeekV3-MoE模块代码解析测试.md  MLA结构代码实现及优化.md  Sinusoida位置编码详解.md  gpt1-3论文解读.md  llava系列模型结构详解.md  llm推理latency分析.md  masked-attention算法详解.md  transformer模型结构详解及实现.md  transformer论文解读.md
3-llm_infer/: llm推理性能测试方案.md  llm推理服务框架总结.md
3-llm_infer_deploy/: Roofline论文解读.md  llm并行策略概述.md  llm推理揭秘论文翻译.md  llm推理服务调度框架对比.md  llm服务框架特性总结.md  llm综合分析论文翻译.md  (+1 more)
(+146 files in other folders)
